--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath plugin.kotlin
         classpath plugin.gradle
         classpath plugin.hilt
+        classpath plugin.serialization
     }
 }
 
