--- a/version.gradle
+++ b/version.gradle
@@ -53,6 +53,7 @@ ktor.json = "io.ktor:ktor-client-json-jvm:$versions.ktor"
 ktor.serialization = "io.ktor:ktor-client-serialization-jvm:$versions.ktor"
 paging.core = "androidx.paging:paging-runtime:$versions.paging"
 room.core = "androidx.room:room-runtime:$versions.room"
+room.kotlin = "androidx.room:room-ktx:$versions.room"
 room.paging = "androidx.room:room-paging:$versions.room"
 room.kapt = "androidx.room:room-compiler:$versions.room"
 room.test = "androidx.room:room-testing:$versions.room"
